Python/output.txt
  File "/var/code.py", line 1
    ;
    ^
SyntaxError: invalid syntax
